# sdk-python

./: .gitignore  MANIFEST.in  justfile  pyproject.toml  requirements-examples.txt
examples/hello/: app.py  justfile  plugin.toml
examples/jinja2/: app.py  plugin.toml
examples/jinja2/templates/: index.html
src/wassel_sdk/: http.py
src/wassel_sdk/wit/: __init__.py  http-plugin.wit
src/wassel_sdk/wit/exports/: __init__.py
src/wassel_sdk/wit/imports/: error.py  http_client.py  ip_name_lookup.py  outgoing_handler.py  poll.py  preopens.py  store.py  streams.py  tcp.py  tcp_create_socket.py  udp.py  udp_create_socket.py  wasi_filesystem_types.py  wasi_http_types.py
