[project]
name = "wassel-sdk-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "setuptools>=82.0",
    "componentize-py>=0.21",
]

[project.scripts]
wassel-build = "wassel_build.main:main"

[build-system]
requires = ["setuptools>=82.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

